# crm-imgui-test2

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
src/: app.cpp  app.h  config.def.h  core.cpp  core.h  main.cpp
src/core/: base.h  string.h  uuid.h
src/imgui/: imgui.cpp  imgui.h
src/ui/: clients_view.cpp  sidebar_panel.cpp  sidebar_panel.h  ui.cpp  ui.h  ui_clients_view.cpp
